# dolmenwood_virtual_dm

./: .gitignore  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_2026_01_03.md  PATCH_NOTES.md  README.md  SESSION_HANDOFF.md  pyproject.toml
.github/workflows/: ci.yml
data/system/: oracle_only_spells.json
docs/: CONDITIONS.md  Dolmenwood_Faction_Relationships_Adventurers_Data_Spec_v1.md  Dolmenwood_Faction_System_Implementation_Schematics_v4.md  Dolmenwood_Faction_System_Integrated_Patch_Plan_v4.md  Dolmenwood_Faction_Turns_Territory_Patch_Plan_WIRING_AUDIT_UPDATED.md  Dolmenwood_Fairy_Roads_Patch_Plan.md  Dolmenwood_Remaining_Spells_Patch_Plan.md  Dolmenwood_Settlement_Engine_Gap_Analysis_and_Implementation_Guide_v2.md  Dolmenwood_Settlement_Engine_Patch_Plan_v2.md  Dolmenwood_Settlement_JSON_Feature_Inventory_v2.json  Dolmenwood_Spell_Implementation_Guide.md  Dolmenwood_Spell_Implementation_Matrix.csv  Dolmenwood_Virtual_DM_Patch_Plan.md  Dolmenwood_Virtual_DM_System_Map(1).json  Dolmenwood_Virtual_DM_System_Map.json  Dolmenwood_Virtual_DM_System_Overview(1).md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_MERGED.md  LORE_IMPORT_GUIDE.md  NARRATION_GAP_ASSESSMENT.md  README_FAIRY_ROAD_LOADER_STUB.txt  SPELL_IMPLEMENTATION_PLAN.md  UNIMPLEMENTED_SPELLS_SUMMARY.md  oracle_only_spells.json  spell_implementation_analysis.md  spell_resolver_issues.md
prompts/: npc_enrichment_prompt.md
scripts/: ci.sh
src/: __init__.py  data_models.py  main.py
src/advancement/: __init__.py  xp_manager.py
src/ai/: __init__.py  dm_agent.py  llm_provider.py  lore_search.py  prompt_schemas.py
src/classes/: __init__.py  ability_registry.py  bard.py  class_data.py  class_manager.py  cleric.py  enchanter.py  fighter.py  friar.py  hunter.py  knight.py  magician.py  thief.py
src/combat/: __init__.py  combat_engine.py
src/content_loader/: __init__.py  content_manager.py  content_pipeline.py  fairy_road_loader.py  fairy_road_registry.py  hex_loader.py  monster_loader.py  monster_registry.py  pdf_parser.py  runtime_bootstrap.py  settlement_loader.py  spell_loader.py  spell_registry.py
src/conversation/: __init__.py  action_registry.py  conversation_facade.py  oracle_enhancement.py  state_export.py  suggestion_builder.py  types.py
src/downtime/: __init__.py  downtime_engine.py
src/dungeon/: __init__.py  dungeon_engine.py
src/encounter/: __init__.py  encounter_engine.py  encounter_factory.py
src/factions/: __init__.py  faction_adventurers.py  faction_effects.py  faction_engine.py  faction_hooks.py  faction_loader.py  faction_models.py  faction_oracle.py  faction_party.py  faction_relations.py  faction_wiring.py
src/fairy_roads/: __init__.py  fairy_road_engine.py  fairy_road_models.py  models.py
src/game_state/: __init__.py  condition_parser.py  global_controller.py  session_manager.py  state_machine.py
src/hex_crawl/: __init__.py  hex_crawl_engine.py
src/items/: __init__.py  item_catalog.py  item_materializer.py
src/kindred/: __init__.py  breggle.py  elf.py  grimalkin.py  human.py  kindred_data.py  kindred_generator.py  kindred_manager.py  mossling.py  woodgrue.py
src/narrative/: __init__.py  creative_resolver.py  hazard_resolver.py  intent_parser.py  narrative_resolver.py  sensory_details.py  spell_context.py  spell_resolver.py
src/npc/: __init__.py  adventurer_data.py  adventurer_tables.py  encounter_npc_generator.py  everyday_mortal_data.py  npc_generator.py
src/observability/: __init__.py  replay.py  run_log.py
src/oracle/: __init__.py  dice_rng_adapter.py  effect_commands.py  mythic_gme.py  spell_adjudicator.py
src/resolution/: __init__.py  skill_resolver.py
src/settlement/: __init__.py  carousing.py  settlement_actions.py  settlement_content_models.py  settlement_encounter_adapter.py  settlement_encounters.py  settlement_engine.py  settlement_registry.py  settlement_services.py  settlement_state_export.py
src/tables/: __init__.py  action_resolver.py  character_tables.py  dolmenwood_tables.py  encounter_roller.py  encounter_tables.py  fishing_tables.py  foraging_tables.py  hunting_tables.py  procedure_triggers.py  secret_door_tables.py  table_manager.py  table_types.py  trap_tables.py  treasure_tables.py  wilderness_encounter_tables.py
src/vector_db/: __init__.py  rules_retriever.py
src/weather/: __init__.py  calendar.py  unseason_tracker.py  weather_types.py
tests/: __init__.py  conftest.py  dolmenwood_spell_helpers.py  helpers.py  test_acquisition_conditions.py  test_all_dolmenwood_spells.py  test_area_effect_system.py  test_carousing.py  test_charm_system.py  test_combat_engine.py  test_combat_triggers.py  test_content_load_status.py  test_conversation_facade.py  test_conversation_integration.py  test_conversation_types.py  test_data_models.py  test_dice.py  test_encounter_engine.py  test_encounter_factory.py  test_encounter_narration.py  test_encounter_system.py  test_faction_engine.py  test_faction_hooks.py  test_faction_loader.py  test_faction_oracle.py  test_faction_party.py  test_faction_wiring.py  test_fairy_road_loader.py  test_fairy_roads.py  test_fishing_tables.py  test_foraging_tables.py  test_harness.py  test_hex_0103_compat.py  test_hex_0104_compat.py  test_hunting_tables.py  test_integration.py  test_llm_authority.py  test_lore_search.py  test_monster_registry.py  test_narrate_from_context.py  (+41 more)
tests/ai/: test_dm_agent_execute_schema_error_handling.py
tests/content_loader/: __init__.py  (+3 more)
(+418 files in other folders)
