[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dolmenwood-virtual-dm"
version = "0.1.0"
description = "A Python-based companion tool for solo TTRPG play in Dolmenwood"
authors = ["Dolmenwood Virtual DM Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.content.dependencies]
# Optional dependencies for content parsing
PyMuPDF = {version = "^1.23", optional = true}
pdfplumber = {version = "^0.10", optional = true}
chromadb = {version = "^0.4", optional = true}
sentence-transformers = {version = "^2.2", optional = true}

[tool.poetry.extras]
pdf = ["PyMuPDF", "pdfplumber"]
vector = ["chromadb", "sentence-transformers"]
all = ["PyMuPDF", "pdfplumber", "chromadb", "sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
mypy = "^1.0"

[tool.poetry.scripts]
dolmenwood-dm = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
